Bug 300737 - Kontact crashed when editing Reminder settings in Calendar
Summary: Kontact crashed when editing Reminder settings in Calendar
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: incidence editors (other bugs)
Version First Reported In: 4.8.x
Platform: Debian unstable Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-28 01:11 UTC by L. Rahyen
Modified: 2012-05-28 22:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description L. Rahyen 2012-05-28 01:11:35 UTC
Application: kontact (4.8.3)
KDE Platform Version: 4.8.3 (4.8.3)
Qt Version: 4.8.1
Operating System: Linux 3.3.0-trunk-amd64 x86_64
Distribution: Debian GNU/Linux unstable (sid)

-- Information about the crash:
- What I was doing when the application crashed:
Kontact crashed when editing Reminder settings in Calendar. This does not happen very often, so it is hard to reproduce on purpose.

The crash does not seem to be reproducible.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fbafe4a5760 (LWP 11516))]

Thread 6 (Thread 0x7fbae29e8700 (LWP 11517)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fbafacb7c0d in WTF::TCMalloc_PageHeap::scavengerThread (this=0x7fbafb678280) at wtf/FastMalloc.cpp:2499
#2  0x00007fbafacb7d19 in WTF::TCMalloc_PageHeap::runScavengerThread (context=<optimized out>) at wtf/FastMalloc.cpp:1622
#3  0x00007fbaf64ccb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#4  0x00007fbafb9ca9dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#5  0x0000000000000000 in ?? ()

Thread 5 (Thread 0x7fbae20e7700 (LWP 11518)):
#0  0x00007fbafb9bfd93 in *__GI___poll (fds=<optimized out>, nfds=<optimized out>, timeout=687) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fbaf5fff4d4 in g_main_context_poll (n_fds=1, fds=0x8bb6f0, timeout=687, context=0x8d3030, priority=<optimized out>) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3440
#2  g_main_context_iterate (context=context@entry=0x8d3030, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3141
#3  0x00007fbaf5fff5f4 in g_main_context_iteration (context=0x8d3030, may_block=1) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#4  0x00007fbafc130736 in QEventDispatcherGlib::processEvents (this=0x8d2d40, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fbafc0fff92 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fbafc1001e7 in QEventLoop::exec (this=0x7fbae20e6e20, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fbafbfff307 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fbafc00232b in QThreadPrivate::start (arg=0x8d2460) at thread/qthread_unix.cpp:298
#9  0x00007fbaf64ccb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#10 0x00007fbafb9ca9dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 4 (Thread 0x7fba9251b700 (LWP 10698)):
#0  0x00007fbaf603b569 in g_private_get (key=key@entry=0x7fbaf62aab20) at /tmp/buildd/glib2.0-2.32.3/./glib/gthread-posix.c:1003
#1  0x00007fbaf60222b0 in g_thread_self () at /tmp/buildd/glib2.0-2.32.3/./glib/gthread.c:996
#2  0x00007fbaf5fff5e5 in g_main_context_iteration (context=0x645a880, may_block=1) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#3  0x00007fbafc130736 in QEventDispatcherGlib::processEvents (this=0x645a020, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007fbafc0fff92 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fbafc1001e7 in QEventLoop::exec (this=0x7fba9251adf0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fbafbfff307 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#7  0x00007fbafc0dfd0f in QInotifyFileSystemWatcherEngine::run (this=0x6447950) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x00007fbafc00232b in QThreadPrivate::start (arg=0x6447950) at thread/qthread_unix.cpp:298
#9  0x00007fbaf64ccb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#10 0x00007fbafb9ca9dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#11 0x0000000000000000 in ?? ()

Thread 3 (Thread 0x7fba8b3f1700 (LWP 10731)):
#0  0x00007fbaf603b1e1 in g_mutex_unlock (mutex=mutex@entry=0x655aa30) at /tmp/buildd/glib2.0-2.32.3/./glib/gthread-posix.c:227
#1  0x00007fbaf5ffeccd in g_main_context_prepare (context=context@entry=0x655aa30, priority=priority@entry=0x7fba8b3f0cd8) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:2872
#2  0x00007fbaf5fff3fb in g_main_context_iterate (context=context@entry=0x655aa30, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3126
#3  0x00007fbaf5fff5f4 in g_main_context_iteration (context=0x655aa30, may_block=1) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#4  0x00007fbafc130736 in QEventDispatcherGlib::processEvents (this=0xebafa0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#5  0x00007fbafc0fff92 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#6  0x00007fbafc1001e7 in QEventLoop::exec (this=0x7fba8b3f0df0, flags=...) at kernel/qeventloop.cpp:204
#7  0x00007fbafbfff307 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:501
#8  0x00007fbafc0dfd0f in QInotifyFileSystemWatcherEngine::run (this=0x6619b40) at io/qfilesystemwatcher_inotify.cpp:248
#9  0x00007fbafc00232b in QThreadPrivate::start (arg=0x6619b40) at thread/qthread_unix.cpp:298
#10 0x00007fbaf64ccb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#11 0x00007fbafb9ca9dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#12 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x7fba881f9700 (LWP 10992)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:162
#1  0x00007fba88877a5d in ?? () from /usr/lib/libvlccore.so.5
#2  0x00007fbaf64ccb50 in start_thread (arg=<optimized out>) at pthread_create.c:304
#3  0x00007fbafb9ca9dd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#4  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fbafe4a5760 (LWP 11516)):
[KCrash Handler]
#6  KCalCore::Alarm::enabled (this=0x100000001) at ../../kcalcore/alarm.cpp:733
#7  0x00007fba96f922a2 in IncidenceEditorNG::IncidenceAlarm::updateButtons (this=0x8c8fa10) at ../../incidenceeditor-ng/incidencealarm.cpp:288
#8  0x00007fbafc115591 in QMetaObject::activate (sender=0x7435480, m=<optimized out>, local_signal_index=<optimized out>, argv=0x0) at kernel/qobject.cpp:3547
#9  0x00007fbafc115591 in QMetaObject::activate (sender=0x790d5d0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffea598710) at kernel/qobject.cpp:3547
#10 0x00007fbafd084137 in QItemSelectionModel::selectionChanged (this=<optimized out>, _t1=..., _t2=...) at .moc/release-shared/moc_qitemselectionmodel.cpp:166
#11 0x00007fbafd089f94 in QItemSelectionModel::emitSelectionChanged (this=0x790d5d0, newSelection=..., oldSelection=...) at itemviews/qitemselectionmodel.cpp:1544
#12 0x00007fbafd08af21 in QItemSelectionModel::select (this=0x790d5d0, selection=..., command=...) at itemviews/qitemselectionmodel.cpp:1110
#13 0x00007fbafd0568d5 in QListView::setSelection (this=<optimized out>, rect=..., command=...) at itemviews/qlistview.cpp:1379
#14 0x00007fbafd03594b in QAbstractItemView::mouseMoveEvent (this=0x7435480, event=0x7fffea599920) at itemviews/qabstractitemview.cpp:1767
#15 0x00007fbafd04c901 in QListView::mouseMoveEvent (this=0x7435480, e=0x7fffea599920) at itemviews/qlistview.cpp:781
#16 0x00007fbafcb5b998 in QWidget::event (this=0x7435480, event=0x7fffea599920) at kernel/qwidget.cpp:8347
#17 0x00007fbafcf17fc6 in QFrame::event (this=0x7435480, e=0x7fffea599920) at widgets/qframe.cpp:557
#18 0x00007fbafd02c11b in QAbstractItemView::viewportEvent (this=0x7435480, event=0x7fffea599920) at itemviews/qabstractitemview.cpp:1644
#19 0x00007fbafc101338 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x74354b0, event=0x7fffea599920) at kernel/qcoreapplication.cpp:986
#20 0x00007fbafcb0b1cf in notify_helper (e=0x7fffea599920, receiver=0x74354b0, this=0x8ce680) at kernel/qapplication.cpp:4555
#21 QApplicationPrivate::notify_helper (this=0x8ce680, receiver=0x74354b0, e=0x7fffea599920) at kernel/qapplication.cpp:4531
#22 0x00007fbafcb10953 in QApplication::notify (this=<optimized out>, receiver=0x74354b0, e=0x7fffea599920) at kernel/qapplication.cpp:4102
#23 0x00007fbafd85fba6 in KApplication::notify (this=0x7fffea59a5f0, receiver=0x74354b0, event=0x7fffea599920) at ../../kdeui/kernel/kapplication.cpp:311
#24 0x00007fbafc1011ac in QCoreApplication::notifyInternal (this=0x7fffea59a5f0, receiver=0x74354b0, event=0x7fffea599920) at kernel/qcoreapplication.cpp:876
#25 0x00007fbafcb0c1d2 in sendEvent (event=<optimized out>, receiver=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#26 QApplicationPrivate::sendMouseEvent (receiver=0x74354b0, event=0x7fffea599920, alienWidget=0x74354b0, nativeWidget=0x4b851f0, buttonDown=0x74354b0, lastMouseReceiver=..., spontaneous=true) at kernel/qapplication.cpp:3170
#27 0x00007fbafcb88635 in QETWidget::translateMouseEvent (this=0x4b851f0, event=<optimized out>) at kernel/qapplication_x11.cpp:4523
#28 0x00007fbafcb874fa in QApplication::x11ProcessEvent (this=0x7fffea59a5f0, event=0x7fffea59a1e0) at kernel/qapplication_x11.cpp:3646
#29 0x00007fbafcbafe62 in x11EventSourceDispatch (s=s@entry=0x8d0070, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#30 0x00007fbaf5fff205 in g_main_dispatch (context=0x8ccad0) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:2539
#31 g_main_context_dispatch (context=context@entry=0x8ccad0) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3075
#32 0x00007fbaf5fff538 in g_main_context_iterate (context=context@entry=0x8ccad0, block=block@entry=1, dispatch=dispatch@entry=1, self=<error reading variable: Unhandled dwarf expression opcode 0xfa>) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3146
#33 0x00007fbaf5fff5f4 in g_main_context_iteration (context=0x8ccad0, may_block=1) at /tmp/buildd/glib2.0-2.32.3/./glib/gmain.c:3207
#34 0x00007fbafc1306cf in QEventDispatcherGlib::processEvents (this=0x897c10, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#35 0x00007fbafcbafaee in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#36 0x00007fbafc0fff92 in QEventLoop::processEvents (this=<optimized out>, flags=...) at kernel/qeventloop.cpp:149
#37 0x00007fbafc1001e7 in QEventLoop::exec (this=0x7fffea59a580, flags=...) at kernel/qeventloop.cpp:204
#38 0x00007fbafc105277 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1148
#39 0x0000000000403959 in main (argc=1, argv=0x7fffea59ac18) at ../../../kontact/src/main.cpp:218

Reported using DrKonqi
Comment 1 Allen Winter 2012-05-28 22:05:00 UTC
Git commit 393f72fcecb642ea098a2d0545c9b90e2af0bb34 by Allen Winter.
Committed on 29/05/2012 at 00:02.
Pushed by winterz into branch 'master'.

In updateButtuns(), ensure we have valid currentIndex of the Alarm
QWidgetList before attempting to get the Alarm associated with that
index.

probably fixes the occassional crash report in bug 300737
FIXED-IN: 4.8.4
MERGE: 4.8

M  +5    -1    incidenceeditor-ng/incidencealarm.cpp

http://commits.kde.org/kdepim/393f72fcecb642ea098a2d0545c9b90e2af0bb34
Comment 2 Allen Winter 2012-05-28 22:05:30 UTC
Git commit 845b2a3afb09e2bba22345c1551ec6afe9729d9d by Allen Winter.
Committed on 29/05/2012 at 00:02.
Pushed by winterz into branch 'KDE/4.8'.

In updateButtuns(), ensure we have valid currentIndex of the Alarm
QWidgetList before attempting to get the Alarm associated with that
index.

probably fixes the occassional crash report in bug 300737
FIXED-IN: 4.8.4
MERGE: 4.8
(cherry picked from commit 393f72fcecb642ea098a2d0545c9b90e2af0bb34)

M  +5    -1    incidenceeditor-ng/incidencealarm.cpp

http://commits.kde.org/kdepim/845b2a3afb09e2bba22345c1551ec6afe9729d9d