In updateButtuns(), ensure we have valid currentIndex of the Alarm QWidgetList before attempting to get the Alarm associated with that index.

probably fixes the occassional crash report in bug 300737
BUG: 300737
FIXED-IN: 4.8.4
MERGE: 4.8